# staticNCurses

./: .gitignore  LICENSE  Makefile  README.md
cpp/: CMakeLists.txt
cpp/src/: SillyLIb.hpp  SillyLib.cpp  SillyLib.h
rust/: Cargo.toml  build.rs
rust/src/: main.rs
